--- a/templates/rango/about.html
+++ b/templates/rango/about.html
@@ -10,6 +10,7 @@ About Rango
 	<div>
 		here is the about page.<br />
 		This tutorial has been put together by Ethan<br />
+		Visits: {{ visits }}<br />
 	</div>
 	<div>
 		<img src="{% static 'images/rango.jpg' %}" alt="Picture of Rango" />
